starting column config for campaign type dev data - imported in AppComponent

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<full-table [data]="campaignData"></full-table>
+<main>
+    <full-table *ngIf="campaignsData" [data]="campaignsData" [config]="campaignColumnConfig"></full-table>
+</main>
